[gd_scene load_steps=5 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/MainMenu/SaveGameElement.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/MainMenu/LoadGameScreen.gd" type="Script" id=3]
[ext_resource path="res://Game/UI/Buttons/BetterButton.tscn" type="PackedScene" id=4]

[node name="LoadGameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 87.0
bbcode_enabled = true
bbcode_text = "Here you can load your previous game
Keep in mind that during the early development save structure might change a lot and so your previous saves might not work anymore, sorry. Your best bet would be saving inside your cell when you wanna switch versions"
text = "Here you can load your previous game
Keep in mind that during the early development save structure might change a lot and so your previous saves might not work anymore, sorry. Your best bet would be saving inside your cell when you wanna switch versions"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 91.0
margin_right = 1280.0
margin_bottom = 95.0

[node name="SavesContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 99.0
margin_right = 1280.0
margin_bottom = 161.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="SaveGameElement" parent="VBoxContainer/ScrollContainer/ScrollVBox/SavesContainer" instance=ExtResource( 2 )]

[node name="SaveGameElement2" parent="VBoxContainer/ScrollContainer/ScrollVBox/SavesContainer" instance=ExtResource( 2 )]
margin_top = 36.0
margin_bottom = 62.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="CloseButton" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 254.0
margin_bottom = 26.0
text = "Close"
myShortcutKey = "1"

[node name="DeleteButton" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 258.0
margin_right = 512.0
margin_bottom = 26.0
text = "Delete Save"
myShortcutKey = "2"

[node name="ImportButton" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 516.0
margin_right = 770.0
margin_bottom = 26.0
text = "Import Save"
myShortcutKey = "3"

[node name="SavesButton" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 774.0
margin_right = 1027.0
margin_bottom = 26.0
text = "Saves folder"
myShortcutKey = "4"

[node name="ExportSaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
window_title = "Export Save"
resizable = true
access = 2
filters = PoolStringArray( "*.save ; Save file" )

[node name="ImportSaveDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.save ; Save file" )

[node name="SaveExportedAlert" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -59.5
margin_right = 250.0
margin_bottom = 59.5
window_title = "Save exported"
dialog_text = "Your save was exported to:"

[connection signal="visibility_changed" from="." to="." method="_on_LoadGameScreen_visibility_changed"]
[connection signal="pressedActually" from="VBoxContainer/GridContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressedActually" from="VBoxContainer/GridContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressedActually" from="VBoxContainer/GridContainer/ImportButton" to="." method="_on_ImportButton_pressed"]
[connection signal="pressedActually" from="VBoxContainer/GridContainer/SavesButton" to="." method="_on_SavesButton_pressed"]
[connection signal="file_selected" from="ExportSaveDialog" to="." method="_on_ExportSaveDialog_file_selected"]
[connection signal="file_selected" from="ImportSaveDialog" to="." method="_on_ImportSaveDialog_file_selected"]
